--- a/Frontend/universe-web/package.json
+++ b/Frontend/universe-web/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.8",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
