--- a/Frontend/universe-web/package.json
+++ b/Frontend/universe-web/package.json
@@ -24,6 +24,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-textarea-autosize": "^8.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
