--- a/Frontend/universe-web/package.json
+++ b/Frontend/universe-web/package.json
@@ -17,13 +17,14 @@
     "dayjs": "^1.11.8",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "next": "^13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-router": "^6.14.1",
     "react-textarea-autosize": "^8.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
