Docker do front resolvido!

--- a/Frontend/universe-web/Dockerfile
+++ b/Frontend/universe-web/Dockerfile
@@ -1,20 +1,15 @@
-# Use a imagem base com suporte ao Node.js
-FROM node:14-alpine
+FROM node:16-alpine
 
-# Defina o diretório de trabalho
 WORKDIR /app
 
-# Copie o código-fonte do front-end para o contêiner
-COPY . /app
+COPY package.json package-lock.json ./
 
-# Instale as dependências do front-end
 RUN npm install
 
-# Construa o front-end
+COPY . .
+
 RUN npm run build
 
-# Exponha a porta em que o front-end está sendo executado (se necessário)
 EXPOSE 3000
 
-# Defina o comando de inicialização do front-end
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
