--- a/Frontend/universe-web/package.json
+++ b/Frontend/universe-web/package.json
@@ -28,5 +28,9 @@
     "react-textarea-autosize": "^8.5.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
   }
 }
